[Feature] Improve spacing, change theme gray color, fix some articles

--- a/styles/base.css
+++ b/styles/base.css
@@ -13,7 +13,7 @@ body {
 
 blockquote {
   border-left: 8px solid #aec2c2;
-  margin: 32px 0;
+  margin: 24px 0;
   padding: 0 12px;
   font-style: italic;
   border-radius: 4px;
@@ -25,6 +25,6 @@ a {
 
 @media only screen and (min-width: 600px) {
   blockquote {
-    margin: 52px 0;
+    margin: 42px 0;
   }
 }
